--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "@reduxjs/toolkit": "^1.4.0",
+    "axios": "^0.20.0",
     "expo": "~38.0.8",
     "expo-asset": "~8.1.7",
     "expo-blur": "~8.1.2",
